[package]
name = "porsmo-extended"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A pomodoro, timer and stopwatch, all in one app"
homepage = "https://github.com/AthereoAndromeda/porsmo-extended"
repository = "https://github.com/AthereoAndromeda/porsmo-extended"
keywords = ["cli", "pomodoro", "timer", "countdown"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
rodio = "0.20.1"
crossterm = "0.29.0"
clap = { version = "4.3.0", features = ["derive"] }
thiserror = "2.0.12"


[[bin]]
name = "porsmox"
path = "src/main.rs"

[profile.dev]
codegen-units = 512

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 3 
panic = "abort" 
strip = true 
